# Kyoo

./: .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pg_format  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  DIAGRAMS.md  Directory.Build.props  Dockerfile  Dockerfile.transcoder  Doxyfile  GitVersion.yml  INSTALLING.md  Kyoo.ruleset  Kyoo.sln  Kyoo.sln.DotSettings  Makefile  OIDC.md  PRIVACY.md  README.md  SECURITY.md  angular.json  biome.json  bitnami.yaml  build.sh  devspace.yaml  docker-compose.build.yml  docker-compose.dev-v5.yml  docker-compose.dev.yml  docker-compose.nvidia.yml  docker-compose.prod.yml  docker-compose.yml  ffmpeg-build.txt  install.sh  jojo.json  (+12 more)
Kyoo/: Helper.cs  (+19 more)
Kyoo.Transcoder/: CMakeLists.txt  Kyoo.Transcoder.cpp  Kyoo.Transcoder.h  Kyoo.Transcoder.vcxproj  Kyoo.Transcoder.vcxproj.filters  Stream.h  Transcoder.cpp  Transcoder.h
Kyoo.Transcoder/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter-7.def  avfilter.lib  avformat-58.def  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
Kyoo.Transcoder/include/: compatibility.h  export.h  helper.h  stream.h  transcoder.h
Kyoo.Transcoder/src/: Stream.h  Transcoder.cpp  Transcoder.h  helper.c  helper.cpp  helper.h  pch.h  subtitles.c  transcoder.c
back/src/Kyoo.Transcoder/: .gitignore  CMakeLists.txt  README.md
scanner/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  devspace.yaml  pyproject.toml  requirements.txt  shell.nix
scanner/matcher/: __init__.py  __main__.py  matcher.py  subscriber.py
scanner/matcher/parser/: guess.py  rules.py
scanner/migrations/: 000001_request.down.sql  000001_request.up.sql
scanner/monitor/: __init__.py  __main__.py  monitor.py  publisher.py  requirements.txt  scanner.py
scanner/old/: __init__.py  cache.py  matcher.py  refresher.py
scanner/old/implementations/: thetvdb.py
scanner/old_scanner/: __main__.py  publisher.py  refresher.py  scanner.py  subscriber.py
scanner/providers/: idmapper.py  kyoo_client.py  provider.py  rabbit_base.py  utils.py
scanner/providers/implementations/: anilist.py  anime-list.py  themoviedatabase.py  thetvdb.py  thexem.py
scanner/providers/types/: collection.py  episode.py  genre.py  metadataid.py  movie.py  season.py  show.py  status.py  studio.py
scanner/scanner/: __init__.py  __main__.py  cache.py  client.py  database.py  fsscan.py  identify.py  jwt.py  log.py  monitor.py  otel.py  publisher.py  queue.py  refresher.py  requests.py  routes.py  scanner.py  status.py  subscriber.py  utils.py
scanner/scanner/guess/: guess.py  rules.py
scanner/scanner/identifiers/: anilist.py  identify.py
transcoder/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  devspace.yaml  go.mod  go.sum  main.go  openapi.json  otel.go  shell.nix  utils.go
transcoder/docs/: FMP4_MIGRATION.md  docs.go  playback.md  swagger.json
transcoder/migrations/: 000001_init_db.down.sql  000001_init_db.up.sql  000002_add_hearing_impaired_column.down.sql  000002_add_hearing_impaired_column.up.sql  000003_subtitle_mime.down.sql  000003_subtitle_mime.up.sql  000004_add_id_column.up.sql
transcoder/src/: audio.rs  audioquality.go  audiostream.go  cmap.go  codec.go  downloader.go  downloads.rs  error.rs  extract.go  ffmpeg_stream.rs  filestream.go  hwaccel.go  identify.rs  info.go  keyframes.go  main.rs  metadata.go  mp4.go  mp4_test.go  paths.rs  quality.go  runlock.go  settings.go  state.rs  stream.go  subtitles.go  thumbnails.go  tracker.go  transcode.rs  transcode_status.go  transcoder.go  utils.go  utils.rs  video.rs  videoquality.go  videostream.go
transcoder/transcoder/: filestream.go  quality.go  stream.go  transcoder.go
(+2653 files in other folders)
