# CMakeList.txt : CMake project for Kyoo.Transcoder, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Kyoo.Transcoder "Kyoo.Transcoder.cpp" "Kyoo.Transcoder.h" "Transcoder.h" "Transcoder.cpp")

# TODO: Add tests and install targets if needed.
