[package]
name = "transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1.27.0", features = ["process", "fs"] }
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"
derive_more = "0.99.17"
reqwest = { version = "0.11.16", default_features = false, features = ["json", "rustls-tls"] }
utoipa = { version = "3", features = ["actix_extras"] }
json = "0.12.4"
cached = { version = "0.46.1", features = ["async"] }
pin-project = "1.1.3"
futures = "0.3.29"
async-stream = "0.3.5"
